--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -47,15 +47,15 @@
             </div>
             <div class "form-group">
                 {{ form.confirm_password.label(class="form-control-label")}}
-                {%if form.password.errors%}
-                {{ form.password(class="form-control form-control-lg is-invalid")}}
+                {%if form.confirm_password.errors%}
+                {{ form.confirm_password(class="form-control form-control-lg is-invalid")}}
                 <div class="invalid-feedcak">
-                    {%for error in form.password.errors%}
+                    {%for error in form.confirm_password.errors%}
                         <span> {{error}} </span>
                     {% endfor %}
                 </div>
                 {%else%}
-                    {{ form.password(class="form-control form-control-lg")}}
+                    {{ form.confirm_password(class="form-control form-control-lg")}}
                 {%endif%}
             </div>
             </fieldset>
