--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -49,7 +49,7 @@
 
 <div class="border-top pt-3">
     <small class ="text-muted">
-        Need An Account? <a href="{{url_for('register')}}">Sign up now</a>
+        Need An Account? <a href="{{url_for('users.register')}}">Sign up now</a>
     </small>
 </div> 
 
