--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -69,7 +69,7 @@
 
 <div class="border-top pt-3">
     <small class ="text-muted">
-         Already Have An Account? <a href="{{url_for('login')}}">Sign in</a>
+         Already Have An Account? <a href="{{url_for('users.login')}}">Sign in</a>
     </small>
 </div> 
 
